--- a/docker/local/Dockerfile
+++ b/docker/local/Dockerfile
@@ -4,10 +4,12 @@ WORKDIR /app
 
 COPY . .
 
-RUN npm ci
+RUN \ 
+  if [ -f package-lock.json ]; then npm ci;fi
 
 RUN npm run build
 
 EXPOSE 3000
 
-CMD [ "npm", "run", "dev" ]
+CMD \
+  if [ -f package-lock.json ]; then npm run dev;fi
