--- a/docker/local/compose.yaml
+++ b/docker/local/compose.yaml
@@ -1,6 +1,7 @@
 services:
   chatapp:
-    container_name: chatapp
+    container_name: chatapp_local
+    image: chatapp_local
     build:
       context: ../../
       dockerfile: docker/local/Dockerfile
