--- a/docker/develop/Dockerfile
+++ b/docker/develop/Dockerfile
@@ -24,8 +24,8 @@ FROM base AS runner
 WORKDIR /app
 
 COPY --from=builder /app/public ./public
+COPY --from=builder /app/.next ./.next
+COPY --from=builder /app/node_modules ./node_modules
+COPY --from=builder /app/package.json ./package.json
 
-# FIXME: COPY --from=builder /app/.next/standalone ./
-COPY --from=builder /app/.next/static ./.next/static
-
-CMD ["node", "server.js"]
+CMD ["npm", "start"]
