--- a/nginx/develop/nginx.conf
+++ b/nginx/develop/nginx.conf
@@ -5,7 +5,7 @@ http {
     listen 80;
 
     location / {
-      proxy_pass http://chatapp_dev:3000;
+      proxy_pass http://chatapp_develop:3000;
     }
   }
 }
